openshift/chat/base/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: chat
  labels:
    app: chat
    app.kubernetes.io/component: chat
    app.kubernetes.io/instance: chat
  annotations:
    image.openshift.io/triggers: '[{"from":{"kind":"ImageStreamTag","name":"chat:latest"},"fieldPath":"spec.template.spec.containers[?(@.name==\"chat\")].image"}]'
spec:
  replicas: 1
  selector:
    matchLabels:
      deployment: chat
  template:
    metadata:
      creationTimestamp: null
      labels:
        deployment: chat
    spec:
      containers:
        - name: chat
          image: ' '
          ports:
            - containerPort: 8080
              protocol: TCP
            - containerPort: 8443
              protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: IfNotPresent
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
