openshift/chat/base/service.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: chat
  creationTimestamp: null
  labels:
    app: chat
    app.kubernetes.io/component: chat
    app.kubernetes.io/instance: chat
spec:
  ports:
    - name: 8080-tcp
      protocol: TCP
      port: 8080
      targetPort: 8080
    - name: 8443-tcp
      protocol: TCP
      port: 8443
      targetPort: 8443
  selector:
    deployment: chat
  type: ClusterIP
  sessionAffinity: None
  ipFamilies:
    - IPv4
  ipFamilyPolicy: SingleStack
